complete icons on blue div and fix alignment

--- a/index.css
+++ b/index.css
@@ -50,13 +50,22 @@ h3{
 
 .blueList {
     color: rgb(255, 255, 255);
-}
-
-.blueListItem {
-    color: rgb(255, 255, 255);
     font-size: 18px;
     font-weight: bold;
     font-family: "Segoe UI",Arial,sans-serif;
+}
+
+.blueListItem1{
+    margin-left: 10em;
+    list-style-image: url("https://img.icons8.com/ios/30/000000/search--v1.png");
+}
+.blueListItem2 {
+    margin-left: 10em;
+    list-style-image: url("https://img.icons8.com/ios/30/000000/conference-call.png");
+}
+.blueListItem3 {
+    margin-left: 10em;
+    list-style-image: url("https://img.icons8.com/windows/32/000000/messaging-.png");
 }
 
 .textInput {
@@ -68,6 +77,7 @@ h3{
 #forgotPwd {
     padding-left: 250px;
 }
+
 
 #loginBtn1 {
     border-radius: 100px;
@@ -136,7 +146,6 @@ h3{
 }
 
 li{
-    text-align: center;
     padding: 5px;
     list-style: none;
 }
